Move index.html to build, copy index + OBS Socket JS to dist ** This is so then we can eventually have a release workflow if needed

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 /build/node_modules/
 
 # Project assets
-/htdocs/assets/*
-!/htdocs/assets/.gitkeep
+/dist/*
+!/dist/.gitkeep
 
 # System files
 .DS_Store
